--- a/googledatabinding/src/main/res/values/strings.xml
+++ b/googledatabinding/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
 	<string name = "hello_world">Hello world!</string>
 	<string name = "action_settings">Settings</string>
+	<string name = "action_load_fragment00">Load Fragment00</string>
 </resources>
