--- a/googledatabinding/src/main/res/values/strings.xml
+++ b/googledatabinding/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 	<string name = "hello_world">Hello world!</string>
 	<string name = "action_settings">Settings</string>
 	<string name = "action_load_fragment00">Load Fragment00</string>
+	<string name = "action_updatebaseobservable">Update B. Observ</string>
+	<string name = "title_activity_main2">Main2Activity</string>
+	<string name = "action_new_activity">New Activity</string>
 </resources>
